updated testSortedTodos() method